Fix info bottom margin
- text was overlapping, we need extra bot margin

--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@
 .info {
     flex-direction: column;
     align-items: center;
+    margin-bottom: 120px;
 }
 
 .info h1 {
